--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
 Babel==2.7.0
 certifi==2019.6.16
+chardet==3.0.4
+defusedxml==0.6.0
 Django==2.2.4
+django-nested-inline==0.3.7
 django-phonenumber-field==3.0.1
 django-rest-passwordreset==1.0.0
 djangorestframework==3.10.2
+djangorestframework-xml==1.4.0
+djangorestframework-yaml==1.0.3
+idna==2.8
 phonenumbers==8.10.17
 pytz==2019.2
+PyYAML==5.1.2
+requests==2.22.0
 sqlparse==0.3.0
+ujson==1.35
+urllib3==1.25.3
 wincertstore==0.2
