--- a/data/shop1.yaml
+++ b/data/shop1.yaml
@@ -11,10 +11,14 @@ goods:
     price_rrc: 116990
     quantity: 14
     parameters:
-      "Диагональ (дюйм)": 6.5
-      "Разрешение (пикс)": 2688x1242
-      "Встроенная память (Гб)": 512
-      "Цвет": золотистый
+      - name: Диагональ (дюйм)
+        value: 6.5
+      - name: Разрешение (пикс)
+        value: 2688x1242
+      - name: Встроенная память (Гб)
+        value: 512
+      - name: Цвет
+        value: золотистый
   - id: 4216313
     category: Смартфоны
     name: Смартфон Apple iPhone XR 256GB (красный)
@@ -22,10 +26,14 @@ goods:
     price_rrc: 69990
     quantity: 9
     parameters:
-      "Диагональ (дюйм)": 6.1
-      "Разрешение (пикс)": 1792x828
-      "Встроенная память (Гб)": 256
-      "Цвет": красный
+      - name: Диагональ (дюйм)
+        value: 6.1
+      - name: Разрешение (пикс)
+        value: 1792x828
+      - name: Встроенная память (Гб)
+        value: 256
+      - name: Цвет
+        value: красный
   - id: 4216226
     category: Смартфоны
     name: Смартфон Apple iPhone XR 256GB (черный)
@@ -33,10 +41,14 @@ goods:
     price_rrc: 69990
     quantity: 5
     parameters:
-      "Диагональ (дюйм)": 6.1
-      "Разрешение (пикс)": 1792x828
-      "Встроенная память (Гб)": 256
-      "Цвет": черный
+      - name: Диагональ (дюйм)
+        value: 6.1
+      - name: Разрешение (пикс)
+        value: 1792x828
+      - name: Встроенная память (Гб)
+        value: 256
+      - name: Цвет
+        value: черный
   - id: 4672670
     category: Смартфоны
     name: Смартфон Apple iPhone XR 128GB (синий)
@@ -44,7 +56,12 @@ goods:
     price_rrc: 64990
     quantity: 7
     parameters:
-      "Диагональ (дюйм)": 6.1
-      "Разрешение (пикс)": 1792x828
-      "Встроенная память (Гб)": 256
-      "Цвет": синий
+      - name: Диагональ (дюйм)
+        value: 6.1
+      - name: Разрешение (пикс)
+        value: 1792x828
+      - name: Встроенная память (Гб)
+        value: 256
+      - name: Цвет
+        value: синий
+
