shop database - file url, recaptcha

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==2.2.4
 django-nested-inline==0.3.7
 django-phonenumber-field==3.0.1
 django-rest-passwordreset==1.0.0
+django-rest-recaptcha==1.0.2
 djangorestframework==3.10.2
 djangorestframework-xml==1.4.0
 djangorestframework-yaml==1.0.3
