--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2019.6.16
 chardet==3.0.4
 defusedxml==0.6.0
 Django==2.2.4
+django-filter==2.2.0
 django-nested-inline==0.3.7
 django-phonenumber-field==3.0.1
 django-rest-passwordreset==1.0.0
@@ -10,6 +11,7 @@ django-rest-recaptcha==1.0.2
 djangorestframework==3.10.2
 djangorestframework-xml==1.4.0
 djangorestframework-yaml==1.0.3
+drf-nested-routers==0.91
 idna==2.8
 phonenumbers==8.10.17
 pytz==2019.2
