--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ celery==4.3.0
 certifi==2019.6.16
 cffi==1.12.3
 chardet==3.0.4
+coverage==4.5.4
 defusedxml==0.6.0
 Django==2.2.4
 django-filter==2.2.0
